--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.3.12",
     "@primeuix/themes": "^2.0.0",
     "express": "^5.1.0",
+    "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
