Fix: Adicionando um titulo a tela e um icon

--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              "src/assets",
+              {
+                "glob": "GreenLogSolutionIcon.ico",
+                "input": "src/assets/icon",
+                "output": "/assets/icon"
               }
             ],
             "styles": [
